<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_product_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.demo.activity.ProductDetail"
    tools:showIn="@layout/activity_product_detail">

    <TextView
        android:id="@+id/tvProductDetailTitle"
        style="@style/textViewProductDetailTitleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/app_name" />

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/margin_05dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvProductDetailTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProductDetailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvProductDetailSalePriceLabel"
                    style="@style/textViewTheme"
                    android:layout_width="@dimen/margin_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/txt_hint_rs" />

                <TextView
                    android:id="@+id/tvProductDetailSalePrice"
                    style="@style/textViewSalePriceTheme"
                    android:layout_width="@dimen/margin_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:text="@string/app_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvProductDetailDescriptionLabel"
                style="@style/textViewProductDescriptionLabelTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_hint_description" />

            <TextView
                android:id="@+id/tvProductDetailDescription"
                style="@style/textViewProductDescriptionTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
